fixes carousel issues with scroll to top and next button alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -177,6 +177,10 @@ p, .contact-form {
 	justify-content: center;
 }
 
+.carousel-control-next {
+	margin-right: 0;
+}
+
 /*-----Testimionials-----*/
 .test-fade {
 	display: none;
